Fix contrast and visibility issues

--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ input[type="checkbox"][id^="checkbox"] {
 }
 
 .credit {
-    font-size: .6rem;
+    font-size: .7rem;
     text-align: center;
     margin-top: 1rem;
     opacity: .7;
@@ -269,7 +269,6 @@ input[type="checkbox"][id^="checkbox"] {
     bottom: 65px;
     right: 0;
     z-index: 1000;
-    font-size: .6rem;
 }
 
 @media screen and (min-width: 800px) {
